kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetdemo
  namespace: dotnet-space
  labels:
    app: dotnetdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnetdemo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: dotnetdemo
    spec:
      nodeSelector:  # Add this nodeSelector field
        project: anvesh1
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: projctr
                operator: In
                values:
                - anvesh
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: project
                operator: In
                values:
                - anvesh1
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: project
                operator: In
                values:
                - anvesh   # The label of the pod you want to avoid colocating with
            topologyKey: kubernetes.io/hostname 
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: main-app-container
        image: anveshreddyarl/dotnetdemo:2.1   
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe: 
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10        
        ports:
        - containerPort: 5000
      tolerations:
      - key: "project"
        operator: "Exists"
        effect: "NoSchedule"
