kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  namespace: reddy
  labels:
    app: dotnetdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnetdemo
  template:
    metadata:
      labels:
        app: dotnetdemo
    spec:
      containers:
      - name: dotnetdemo
        image: anveshreddyarl/dotnetdemo:latest
        ports:
        - containerPort: 80
